style:fixed white spaces on mobile device

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,17 +4,14 @@
 
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  width: 100%;
+  overflow-x:hidden;
+}
+body::-webkit-scrollbar {
+  display: none;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+body{
+  -msoverflow-style: none;
+  scrollbar-width: none;
 }
